@@ -3,6 +3,7 @@ readsb (3.8.4~dev) UNRELEASED; urgency=medium
   * In development
   * Support GNS HULC antenna.
   * Interrupt driven serial device handling removed.
+  * Clean up linkage of struct Modes. (via dump1090-fa)
   * Contribution wiedehopf:
     * Improve altitude filter.
     * Show zero timestamps using viewadsb.
